# uni-map-canvas

./: package-lock.json  package.json  vercel.json
unimap-backend/: .env.example  .gitignore  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  package-lock.json  pyproject.toml
unimap-backend/.github/workflows/: ci-cd.yml
unimap-backend/alembic/: env.py
unimap-backend/alembic/versions/: 001_initial.py
unimap-backend/backend/: main.py
unimap-backend/backend/api/modules/agenda/models/: agenda_models.py
unimap-backend/backend/api/modules/agenda/router/: agenda_router.py
unimap-backend/backend/api/modules/agenda/service/: agenda_service.py
unimap-backend/backend/api/modules/analytics/router/: analytics_router.py
unimap-backend/backend/api/modules/audit/models/: audit_log.py
unimap-backend/backend/api/modules/audit/router/: audit_router.py
unimap-backend/backend/api/modules/auth/router/: auth_router.py
unimap-backend/backend/core/: celery_app.py
unimap-backend/backend/core/config/: settings.py
unimap-backend/backend/core/tasks/: maintenance_tasks.py  notification_tasks.py
unimap-backend/backend/shared/cache/: redis_service.py
unimap-backend/backend/shared/database/: base_entity.py  base_repository.py  engine.py
unimap-backend/backend/shared/exceptions/: auth.py
unimap-backend/backend/shared/middleware/: handlers.py
unimap-backend/backend/shared/security/: encryption.py  jwt.py  rbac.py
unimap-backend/docker/: Dockerfile.api  prometheus.yml
unimap-backend/scripts/: init_db.sql  seed_db.py
unimap-backend/tests/: conftest.py
unimap-backend/tests/integration/: test_admin_access.py  test_agenda_access.py  test_auth_endpoints.py  test_clinics_endpoints.py  test_health.py  test_maps_endpoints.py
unimap-backend/tests/unit/: test_auth.py  test_blackboard.py  test_encryption.py
(+68 files in other folders)
