[tool.poetry]
name = "unimap-backend"
version = "3.0.0"
description = "UniMap 3.0 - Backend Corporativo Universitário"
authors = ["UniMap Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
alembic = "^1.13.0"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
redis = {extras = ["hiredis"], version = "^5.0.0"}
pydantic = {extras = ["email"], version = "^2.7.0"}
pydantic-settings = "^2.3.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["argon2"], version = "^1.7.4"}
argon2-cffi = "^23.1.0"
python-multipart = "^0.0.9"
httpx = "^0.27.0"
celery = {extras = ["redis"], version = "^5.4.0"}
cryptography = "^42.0.0"
aiofiles = "^23.2.1"
python-dateutil = "^2.9.0"
structlog = "^24.1.0"
prometheus-client = "^0.20.0"
opentelemetry-api = "^1.24.0"
opentelemetry-sdk = "^1.24.0"
slowapi = "^0.1.9"
orjson = "^3.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
factory-boy = "^3.3.0"
faker = "^25.0.0"
httpx = "^0.27.0"
black = "^24.4.0"
ruff = "^0.4.0"
mypy = "^1.10.0"
pre-commit = "^3.7.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=backend --cov-report=term-missing --cov-fail-under=90"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
